Fixing centering and contrast issues

--- a/css/index.css
+++ b/css/index.css
@@ -217,7 +217,7 @@ html {
   font-size: 5.4rem;
   margin-top: 150px;
   color: #85CDCA;
-  text-shadow: #4EB4A3 1px 0 10px;
+  text-shadow: black 1px 0 10px;
   text-align: center;
 }
 .container header .heading h4 {
@@ -226,6 +226,7 @@ html {
   color: #85CDCA;
   text-align: center;
   line-height: 2.4rem;
+  text-shadow: black 1px 0 5px;
 }
 @media (max-width: 500px) {
   .container header .heading h4 {
@@ -325,8 +326,13 @@ html {
   display: flex;
   flex-flow: column wrap;
   height: 580px;
-  margin: 40px auto 0 auto;
   align-items: center;
+  margin-top: 50px;
+}
+@media (max-width: 800px) {
+  .container main .features {
+    width: 800px;
+  }
 }
 @media (max-width: 500px) {
   .container main .features {
@@ -334,16 +340,16 @@ html {
     height: auto;
     align-items: center;
     justify-content: center;
+    width: 100%;
   }
 }
 .container main .features .f1,
 .container main .features .f2,
 .container main .features .f3,
 .container main .features .f4 {
-  width: 48%;
+  width: 50%;
   height: 250px;
   text-align: center;
-  padding: 10px;
 }
 @media (max-width: 500px) {
   .container main .features .f1,
@@ -497,13 +503,13 @@ html {
   margin-top: 40px;
   margin-bottom: 30px;
   color: #4EB4A3;
-  text-shadow: #85CDCA 1px 0 10px;
+  text-shadow: black 2px 0 5px;
 }
 .container .bottom-block footer p {
   font-size: 1.8rem;
   margin-bottom: 20px;
   color: #4EB4A3;
-  text-shadow: #85CDCA 1px 0 10px;
+  text-shadow: black 2px 0 5px;
 }
 .container .bottom-block footer button {
   padding: 10px 50px;
