--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,7 +11,7 @@
             font-size: 5.4rem;
             margin-top: 150px;
             color: @middle-blue-green;
-            text-shadow: @verdigris 1px 0 10px;
+            text-shadow: black 1px 0 10px;
             text-align: center;
         }
         h4 {
@@ -20,6 +20,7 @@
             color: @middle-blue-green;
             text-align: center;
             line-height: 2.4rem;
+            text-shadow: black 1px 0 5px;
 
             @media @mobile {
                 padding: 0 30px;
@@ -88,21 +89,25 @@
                 display: flex;
                 flex-flow: column wrap;
                 height: 580px;
-                margin: 40px auto 0 auto;
                 align-items: center;
+                margin-top: 50px;
+                
+                @media @tablet {
+                    width: 800px;
+                }
 
                 @media @mobile {
                     flex-flow: column;
                     height: auto;
                     align-items: center;
                     justify-content: center;
+                    width: 100%;
                 }
 
                 .f1, .f2, .f3, .f4 {
-                    width: 48%;
+                    width: 50%;
                     height: 250px;
                     text-align: center;
-                    padding: 10px;
 
                     @media @mobile {
                         width: 90%;
@@ -207,14 +212,14 @@
                     margin-top: 40px;
                     margin-bottom: 30px;
                     color: @verdigris;
-                    text-shadow: @middle-blue-green 1px 0 10px;
+                    text-shadow: black 2px 0 5px;
                 }
 
                 p {
                     font-size: 1.8rem;
                     margin-bottom: 20px;
                     color: @verdigris;
-                    text-shadow: @middle-blue-green 1px 0 10px;
+                    text-shadow: black 2px 0 5px;
                 }
                 button {
                     .btn();
